data/resources/istio_objects/dest-rules-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: auto-reviews-dr-svc
  namespace: bookinfo
spec:
  host: reviews.bookinfo
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
  subsets:
  - name: v1
    labels:
      version: v1
