data/resources/istio_objects/destination-rule-cb-details.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destinationrules
spec:
  labels:
    version: v2
  host: details
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 100
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
    outlierDetection:
      consecutiveErrors: 1
      interval: 1s
      baseEjectionTime: 3m
  subsets:
  - name: v1
    labels:
      version: v1
