data/resources/istio_objects/virtual-service-broken-weight.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-broken-weight-auto
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        name: reviews
        subset: v1
      weight: 40
    - destination:
        name: reviews
        subset: v2
      weight: 50
