data/resources/istio_objects/virtual-service-broken.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-broken-auto
spec:
  hosts:
  - reviews
  gateways:
  - bookinfo-gateway-auto-bad
  http:
    - match:
      - uri:
          exact: /reviews
      - uri:
          exact: /login
      - uri:
          exact: /logout
      - uri:
          prefix: /api/v1/products
      route:
         - destination:
             host: reviews-bad
             subset: v1
