data/resources/istio_objects/virtual-service-subset-duplicate.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-subset-auto
spec:
  hosts:
  - reviews
  gateways:
  - bookinfo-gateway-auto
  http:
    - match:
      - uri:
          exact: /reviews
      - uri:
          exact: /login
      - uri:
          exact: /logout
      - uri:
          prefix: /api/v1/products
      route:
         - destination:
             host: reviews
             subset: v1
           weight: 80
         - destination:
             host: reviews
             subset: v2
           weight: 10
         - destination:
             host: reviews
             subset: v2
           weight: 10
