data/resources/istio_objects/virtual-service-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-auto-svc
spec:
  hosts:
  - reviews.bookinfo2.svc.cluster.local
  http:
  - route:
    - destination:
        host: reviews
        subset: v1
      weight: 50
    - destination:
        host: reviews
        subset: v2
      weight: 50
