data/resources/istio_objects/auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: httpbin
 namespace: bookinfo2
spec:
 selector:
   matchLabels:
     app: wrong-label
     version: v1
 rules:
 - from:
   - source:
       principals: ["cluster.local/ns/default/sa/sleep"]
   - source:
       namespaces: ["test", "bookinfo2"]
   to:
   - operation:
       hosts: ["details", "wrong", "details.bookinfo2", "wrong.wrong", "prometheus.istio-system"]
       methods: ["GET", "WRONG"]
       paths: ["/info*"]
   - operation:
       methods: ["POST", "WRONG"]
       paths: ["/data"]
   when:
   - key: request.auth.claims[iss]
     values: ["https://accounts.google.com"]
